fix: 停用wiki-provider模块、异步任务使用协程，优化错误打印